@@ -228,10 +228,10 @@ echo "PLUGINS=auto" >>%{buildroot}/etc/sysconfig/sipwitch
 %dir %{_libdir}/sipwitch
 %config %{_sysconfdir}/logrotate.d/sipwitch
 %attr(0755,root,root) %{_sysconfdir}/init.d/sipwitch
-%attr(0770,root,root) %dir %{_localstatedir}/lib/sipwitch
+%attr(0770,root,root) %dir %{_sysconfdir}/sipwitch.d
 %attr(0660,root,root) %config %{_sysconfdir}/sipwitch.conf
 %attr(0660,root,root) %config %{_sysconfdir}/sysconfig/sipwitch
-%attr(0660,root,root) %config %{_localstatedir}/lib/sipwitch/*.xml
+%attr(0660,root,root) %config %{_sysconfdir}/sipwitch.d/*.xml
 
 %files -n %{_libname}
 %defattr(-,root,root,-)
